compiler/testData/diagnostics/tests/dataClassPrivateConstructor/deprecationPhase3_redundantConsistentDataCopyAnnotation.fir.kt
// WITH_STDLIB
// LANGUAGE: +DataClassCopyRespectsConstructorVisibility
<!REDUNDANT_ANNOTATION!>@kotlin.ConsistentDataCopyVisibility<!>
data class Data private constructor(val x: Int)
